# KeepId-TheKeep

./: .dockerignore  .gitignore  docker-compose.dev.yml
.devcontainer/: Dockerfile  devcontainer.json
the-holy-cow/: main.cpp
the-keep/: .gitignore  CMakeLists.txt  ServerConfig.cpp  ServerConfig.hpp  build-debug.sh  build.sh  main.cpp
the-keep/comms/: CMakeLists.txt  CassandraDriver.cpp  CassandraDriver.hpp  CommErrors.hpp  CommsConfig.hpp  HolyCow.sql  KafkaDriver.cpp  KafkaDriver.hpp  KeepId-KafkaTopics.sh  TheKeepDB.hpp  TheKeepMessaging.hpp
the-keep/core/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.hpp  Logger.cpp  Logger.hpp  TaskWorker.hpp
the-keep/core/cryptography-wrappers/: CryptoWrapper.hpp  CryptoWrapper_Cryptopp.cpp  CryptoWrapper_Cryptopp.hpp
the-keep/core/data-fields/: Assertions.cpp  Assertions.hpp  Config.cpp  Config.hpp  Constants.hpp
the-keep/core/key-manager/: KeyManager.cpp  KeyManager.hpp
the-keep/core/task-manager/: MessageClient.hpp  TaskLogic.cpp  TaskLogic.hpp  TaskManager.cpp  TaskManager.hpp
the-keep/tests/: CMakeLists.txt  Test_CassandraCow.cpp  Test_CryptoWrapper_Cryptopp.cpp  Test_DataField_Assertions.cpp  Test_DataField_Config.cpp  Test_HelperFunctions.cpp  Test_KeyManager.cpp  Test_TaskManager.cpp  test_common.cpp  test_common.hpp  test_main.cpp
the-keep/tests/sample_data_fields/: config_valid.json  keep_unencrypted_update_valid.json  random.json  real_format_data_request.json  real_format_data_update.json  request_valid.json  update_valid.json
the-keep/tests/sample_data_fields/decrypted_data_jsons/: decrypted_data_fields_invalid_multi_all.json  decrypted_data_fields_invalid_multi_all_2.json  decrypted_data_fields_invalid_multi_opt_invalid.json  decrypted_data_fields_invalid_names.json  decrypted_data_fields_invalid_single_int_max_chars.json  decrypted_data_fields_invalid_single_int_str_chars.json  decrypted_data_fields_invalid_single_opt_invalid.json  decrypted_data_fields_invalid_single_str_max_chars.json  decrypted_data_fields_no_invalid.json
the-keep/tests/sample_data_fields/invalid_config_jsons/: config_invalid_constraints_constraint_duplicate.json  config_invalid_constraints_data_field_not_dictionary.json  config_invalid_constraints_empty.json  config_invalid_constraints_input_type_invalid_key_word.json  config_invalid_constraints_input_type_missing.json  config_invalid_constraints_input_type_not_string_type.json  config_invalid_constraints_max_chars_missing.json  config_invalid_constraints_max_chars_negative.json  config_invalid_constraints_max_chars_not_int_type.json  config_invalid_constraints_max_chars_not_needed.json  config_invalid_constraints_max_chars_zero.json  config_invalid_constraints_missing.json  config_invalid_constraints_not_dictionary.json  config_invalid_constraints_options_invalid_reference.json  config_invalid_constraints_options_missing.json  config_invalid_constraints_options_not_needed.json  config_invalid_constraints_options_not_string_type.json  config_invalid_constraints_unknown_key.json  config_invalid_option_lists_missing.json  config_invalid_option_lists_options_content_duplicate.json  config_invalid_option_lists_options_contents_not_string_type.json  config_invalid_option_lists_options_duplicate.json  config_invalid_option_lists_options_empty.json  config_invalid_option_lists_options_is_not_list.json  config_invalid_unknown_key.json  config_invalid_valid_reference.json
the-keep/tests/sample_data_fields/invalid_request_jsons/: request_invalid_duplicate_key.json  request_invalid_private_keys_empty.json  request_invalid_private_keys_entry_duplicate.json  request_invalid_private_keys_entry_invalid.json  request_invalid_private_keys_entry_not_string_type.json  request_invalid_private_keys_missing.json  request_invalid_private_keys_not_dictionary_type.json  request_invalid_private_public_keys_entry_invalid.json  request_invalid_public_keys_empty.json  request_invalid_public_keys_entry_duplicate.json  request_invalid_public_keys_entry_invalid.json  request_invalid_public_keys_entry_not_string_type.json  request_invalid_public_keys_missing.json  request_invalid_public_keys_not_dictionary_type.json  request_invalid_request_id_missing.json  request_invalid_request_id_not_string_type.json  request_invalid_unknown_key.json  request_invalid_user_id_missing.json  request_invalid_user_id_not_string_type.json  request_invalid_valid_reference.json
the-keep/tests/sample_data_fields/invalid_update_jsons/: update_invalid_duplicate_key.json  update_invalid_encrypted_data_fields_empty.json  update_invalid_encrypted_data_fields_entry_duplicate.json  update_invalid_encrypted_data_fields_entry_invalid.json  update_invalid_encrypted_data_fields_entry_not_string_type.json  update_invalid_encrypted_data_fields_missing.json  update_invalid_encrypted_data_fields_not_dictionary_type.json  update_invalid_unknown_key.json  update_invalid_user_id_missing.json  update_invalid_user_id_not_string_type.json  update_invalid_valid_reference.json
the-keep/tests/sample_test_keys/: KeepPrivateKey.test_dat  KeepPublicKey.test_dat
